--- a/src/components/landing/landing.scss
+++ b/src/components/landing/landing.scss
@@ -69,13 +69,14 @@
     }
 }
 
-// This is the code for the gray strip section
+// This is the code for the grey strip section
 
-.bg-dark-grey {
+.dark-grey {
     height: 50px;
     width: 100%;
     @include flex-center;
     color: var(--color-white);
+    background: var(--color-dark-grey);
 
     .vegas {
         @include flex-center;
@@ -213,6 +214,7 @@
         position: absolute;
         width: 1000px;
         height: 500px;
+        z-index: 1;
     }
 
     .play {
@@ -228,10 +230,33 @@
 
 .bg-light-grey {
     width: 100%;
-    height: 1000px;
+    height: 1300px;
 
     .field {
         width: 100%;
         height: 550px;
     }
+}
+
+// Dark Grey Thank You Section:  This section is the dark grey section with the angled background.
+
+.bg-dark-grey {
+    height: 500px;
+    width: 100%;
+    z-index: 3;
+    position: relative;
+}
+
+.bg-dark-grey:after {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    content: '';
+    background: inherit;
+    top:0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    transform: skewY(-6deg);
+    transform-origin: top left;
 }
