--- a/src/components/landing/landing.css
+++ b/src/components/landing/landing.css
@@ -161,6 +161,10 @@
     font-weight: 500; }
   .paragraphParent #trademark {
     font-size: 9px; }
+  .paragraphParent sup {
+    vertical-align: baseline;
+    position: relative;
+    top: -0.4em; }
 
 .learnMore {
   display: flex;
@@ -189,15 +193,110 @@
 
 .bg-light-grey {
   width: 100%;
-  height: 1300px; }
+  height: 1350px; }
   .bg-light-grey .field {
     width: 100%;
-    height: 550px; }
+    height: 500px; }
+  .bg-light-grey .pillowTitle {
+    margin-top: -130px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row; }
+    .bg-light-grey .pillowTitle h3 {
+      letter-spacing: 1px; }
+    .bg-light-grey .pillowTitle #sup {
+      font-size: 18px; }
+      .bg-light-grey .pillowTitle #sup h3 {
+        letter-spacing: 1px; }
+  .bg-light-grey .pillowTitle2 {
+    margin-top: -30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row; }
+  .bg-light-grey .pillowParaParent {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row; }
+    .bg-light-grey .pillowParaParent .pillowParagraph {
+      margin-top: 20px;
+      margin-bottom: -20px;
+      width: 560px;
+      height: 200px;
+      font-weight: 500; }
+    .bg-light-grey .pillowParaParent #pillowPara {
+      line-height: 22px;
+      letter-spacing: 1px; }
+    .bg-light-grey .pillowParaParent #registered {
+      font-size: 10px; }
+    .bg-light-grey .pillowParaParent sup {
+      vertical-align: baseline;
+      position: relative;
+      top: -0.4em; }
+  .bg-light-grey .pillowImgParent {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row; }
+    .bg-light-grey .pillowImgParent .pillowsImg1 {
+      height: 180px; }
+  .bg-light-grey .pillowNamesParent {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    margin-left: 50px;
+    margin-right: 50px; }
+    .bg-light-grey .pillowNamesParent .pillowSpace {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      margin-right: 90px;
+      margin-left: 70px; }
+    .bg-light-grey .pillowNamesParent #pillowReg {
+      font-size: 9px; }
+    .bg-light-grey .pillowNamesParent #pillowSup {
+      font-size: 9px; }
+    .bg-light-grey .pillowNamesParent sup {
+      vertical-align: baseline;
+      position: relative;
+      top: -0.4em; }
+  .bg-light-grey .randomPicsParent {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    position: relative;
+    margin-top: 80px; }
+  .bg-light-grey .headboard {
+    position: relative;
+    margin-top: 225px;
+    margin-right: 15px;
+    height: 225px;
+    width: 500px;
+    z-index: 4; }
+  .bg-light-grey .showroom {
+    position: relative;
+    margin-top: 15px;
+    margin-left: 15px;
+    margin-right: 15px;
+    width: 500px;
+    height: 450px;
+    z-index: 4; }
+  .bg-light-grey .hamburger {
+    position: relative;
+    margin-top: -230px;
+    margin-left: 15px;
+    width: 500px;
+    height: 225px;
+    z-index: 4; }
 
 .bg-dark-grey {
   height: 500px;
   width: 100%;
-  z-index: 3;
   position: relative; }
 
 .bg-dark-grey:after {
