--- a/src/components/landing/landing.css
+++ b/src/components/landing/landing.css
@@ -52,7 +52,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: row;
-  color: var(--color-white);
+  color: var(--color-light-grey);
   background: var(--color-dark-grey); }
   .dark-grey .vegas {
     display: flex;
@@ -172,7 +172,9 @@
   align-items: center;
   flex-direction: row;
   width: 100%;
-  letter-spacing: 1.3px; }
+  letter-spacing: 1px;
+  font-weight: 500;
+  font-size: 18px; }
 
 .videoParent {
   display: flex;
@@ -193,7 +195,7 @@
 
 .bg-light-grey {
   width: 100%;
-  height: 1350px; }
+  height: 1380px; }
   .bg-light-grey .field {
     width: 100%;
     height: 500px; }
@@ -270,32 +272,70 @@
     align-items: center;
     flex-direction: row;
     position: relative;
-    margin-top: 80px; }
-  .bg-light-grey .headboard {
-    position: relative;
-    margin-top: 225px;
-    margin-right: 15px;
-    height: 225px;
-    width: 500px;
-    z-index: 4; }
-  .bg-light-grey .showroom {
-    position: relative;
-    margin-top: 15px;
-    margin-left: 15px;
-    margin-right: 15px;
-    width: 500px;
-    height: 450px;
-    z-index: 4; }
-  .bg-light-grey .hamburger {
-    position: relative;
-    margin-top: -230px;
-    margin-left: 15px;
-    width: 500px;
-    height: 225px;
-    z-index: 4; }
+    margin-top: 130px; }
+    .bg-light-grey .randomPicsParent #headboardTitle {
+      display: flex;
+      justify-content: flex-end;
+      margin-right: 20px;
+      margin-top: 155px;
+      line-height: 0px;
+      letter-spacing: .8px; }
+    .bg-light-grey .randomPicsParent .newStructures {
+      display: flex;
+      justify-content: flex-end;
+      margin-bottom: 30px;
+      line-height: 2px;
+      margin-right: 20px;
+      font-style: italic;
+      font-weight: 500;
+      letter-spacing: 1px; }
+    .bg-light-grey .randomPicsParent #supStructures {
+      font-size: 11px; }
+    .bg-light-grey .randomPicsParent sup {
+      vertical-align: baseline;
+      position: relative;
+      top: -0.6em; }
+    .bg-light-grey .randomPicsParent .headboard {
+      position: relative;
+      margin-right: 20px;
+      height: 200px;
+      width: 500px;
+      z-index: 4; }
+    .bg-light-grey .randomPicsParent .showroom {
+      position: relative;
+      margin-top: 15px;
+      margin-left: 20px;
+      margin-right: 20px;
+      width: 500px;
+      height: 400px;
+      z-index: 4; }
+    .bg-light-grey .randomPicsParent .hamburger {
+      position: relative;
+      margin-top: -115px;
+      margin-left: 20px;
+      width: 500px;
+      height: 200px;
+      z-index: 4; }
+    .bg-light-grey .randomPicsParent #hamburgerTitle {
+      position: relative;
+      margin-left: 20px;
+      margin-top: 35px;
+      z-index: 4;
+      color: var(--color-light-grey);
+      line-height: 0px;
+      letter-spacing: .8px; }
+    .bg-light-grey .randomPicsParent .chefPrepared {
+      position: relative;
+      z-index: 4;
+      line-height: 2px;
+      margin-left: 20px;
+      color: var(--color-light-grey);
+      font-style: italic;
+      font-weight: 500;
+      letter-spacing: 1px; }
 
 .bg-dark-grey {
-  height: 500px;
+  height: 440px;
   width: 100%;
   position: relative; }
 
@@ -311,3 +351,23 @@
   right: 0;
   transform: skewY(-6deg);
   transform-origin: top left; }
+
+.thankTitle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  position: relative;
+  z-index: 4; }
+  .thankTitle .thank {
+    margin-top: 230px;
+    color: var(--color-light-grey);
+    line-height: 2px; }
+  .thankTitle .thankSub {
+    color: var(--color-light-grey);
+    font-weight: 400;
+    line-height: 10px; }
+  .thankTitle .recap {
+    margin-top: 30px;
+    letter-spacing: 1.3px;
+    font-weight: 500; }
