--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -22,9 +22,10 @@
   justify-content: center;
   align-items: center;
   flex-direction: row;
-  background-color: rgba(255, 255, 255, 0.288);
+  background-color: rgba(172, 170, 170, 0.637);
   height: 500px;
-  width: 100%; }
+  width: 1000px;
+  border-radius: 5px; }
   .modalBG .exit {
     position: absolute;
     top: 80px;
@@ -46,5 +47,5 @@
     border-radius: 0px; }
     .modalBG .closeButton:hover {
       transition: .8s;
-      background-color: rgba(65, 65, 65, 0.979);
+      background-color: rgba(172, 170, 170, 0.637);
       color: black; }
