--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -7,6 +7,13 @@
   height: 55px;
   width: 100%; }
 
+.hamburgerMenu {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 55px;
+  display: none !important; }
+
 .navLogo {
   position: absolute;
   top: 20px;
@@ -67,3 +74,20 @@
   font-weight: bold;
   letter-spacing: 1px;
   cursor: pointer; }
+
+@media screen and (max-width: 992px) {
+  .navMenu {
+    display: none !important; }
+  .hamburgerMenu {
+    display: block !important;
+    cursor: pointer; }
+  .navLogo {
+    position: absolute;
+    left: 65px;
+    right: 20px; } }
+
+@media screen and (max-width: 350px) {
+  .navLogo {
+    position: absolute;
+    left: 20px;
+    top: 80px; } }
