--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -16,6 +16,14 @@
 
 // Logo
 
+.hamburgerMenu {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 55px;
+    display: none !important;
+}
+
 .navLogo {
    position: absolute;
    top: 20px;
@@ -82,4 +90,33 @@
     font-weight: bold;
     letter-spacing: 1px;
     cursor: pointer;
+}
+
+//Navbar Media Queries
+
+@media screen and(max-width: 992px) {
+
+    .navMenu {
+        display: none !important;
+    }
+
+    .hamburgerMenu {
+        display: block !important;
+        cursor: pointer;
+    }
+
+    .navLogo {
+        position: absolute;
+        left: 65px;
+        right: 20px;
+    }
+}
+
+@media screen and(max-width: 350px) {
+
+    .navLogo {
+        position: absolute;
+        left: 20px;
+        top: 80px;
+    }
 }
