--- a/src/components/landing/landing.scss
+++ b/src/components/landing/landing.scss
@@ -122,11 +122,32 @@
         margin-top: 30px;
         margin-left: 20px;
         letter-spacing: 1px;
+        font-family: 'Neutra';
+        font-variant-numeric: lining-nums;
+        text-transform: uppercase;
+        color: var(--color-dark-grey);
+        margin-bottom: 0.25rem;
+        font-size: 20px;
+        font-weight: 600;
+    }
+
+    .wovenSubtitle2 {
+        position: absolute;
+        margin-top: 55px;
+        margin-left: 20px;
+        letter-spacing: 1px;
+        font-family: 'Neutra';
+        font-variant-numeric: lining-nums;
+        text-transform: uppercase;
+        color: var(--color-dark-grey);
+        margin-bottom: 0.25rem;
+        font-size: 20px;
+        font-weight: 600;
     }
 
     .btn {
         position: absolute;
-        margin-top: 90px;
+        margin-top: 85px;
         margin-left: -10px;
 
         .btn-black {
@@ -152,22 +173,12 @@
     @include flex-center;
 
     .linenImgs {
+        @include flex-center;
         height: 200px;
         margin-top: 20px;
         margin-right: 105px;
         margin-left: 105px;
     }
-
-    .warranty {
-        position: absolute;
-        margin-top: 16px;
-        margin-left: 225px;
-        height: 100px;
-    }
-}
-
-.titleParent {
-    @include flex-center;
 
     .linensTitle {
         @include flex-center;
@@ -179,20 +190,23 @@
         font-size: 20px;
         letter-spacing: .8px;
     }
-}
-
-.paragraphParent {
-    @include flex-center;
-    margin-top: -20px;
 
     .linenParagraphs {
         font-size: 16px;
         letter-spacing: .4px;
+        width: 305px;
+        margin-top: -20px;
         margin-right: 50px;
         margin-left: 60px;
-        width: 305px;
         height: 240px;
         font-weight: 500;
+    }
+
+    .warranty {
+        position: absolute;
+        margin-top: 16px;
+        margin-left: 225px;
+        height: 100px;
     }
 
     #trademark {
@@ -469,7 +483,7 @@
     }
 }
 
-// Landing Page Media Queries
+////// Landing Page Media Queries //////////////////////////////////////////////////////////////////////////////
 
     // Desktops
 
@@ -489,6 +503,25 @@
     .landingHeader {
         height: 675px;
     }
+
+    .linenImgs {
+        margin-right: 80px !important;
+        margin-left: 80px !important;
+    }
+
+    .warranty {
+        margin-left: 218px !important;
+    }
+
+    .linensTitle {
+        margin-right: 57px !important;
+        margin-left: 57px !important;
+    }
+
+    .linenParagraphs {
+        margin-right: 30px !important;
+        margin-left: 35px !important;
+    }
 }
 
 @media screen and(max-width: 1600px) {
@@ -499,6 +532,35 @@
     .headerTitleParent {
         margin-top: 120px !important;
         margin-right: 50px;
+    }
+
+    .wovenParent {
+        @include flex-center;
+        margin-left: 20px;
+    }
+
+    .wovenImg {
+        height: 520px !important;
+        width: 870px !important;
+    }
+
+    .linenImgs {
+        margin-right: 70px !important;
+        margin-left: 70px !important;
+    }
+
+    .warranty {
+        margin-left: 205px !important;
+    }
+
+    .linensTitle {
+        margin-right: 50px !important;
+        margin-left: 50px !important;
+    }
+
+    .linenParagraphs {
+        margin-right: 20px !important;
+        margin-left: 25px !important;
     }
 }
 
@@ -513,6 +575,30 @@
         margin-top: 90px !important;
         margin-right: 70px;
     }
+
+    .wovenParent {
+        @include flex-center;
+        margin-left: 40px;
+    }
+
+    .linenImgs {
+        margin-right: 60px !important;
+        margin-left: 60px !important;
+    }
+
+    .warranty {
+        margin-left: 195px !important;
+    }
+
+    .linensTitle {
+        margin-right: 40px !important;
+        margin-left: 40px !important;
+    }
+
+    .linenParagraphs {
+        margin-right: 10px !important;
+        margin-left: 20px !important;
+    }
 }
 
 @media screen and(max-width: 1400px) {
@@ -523,6 +609,33 @@
     .headerTitleParent {
         margin-top: 70px !important;
         margin-right: 100px;
+    }
+
+    .wovenParent {
+        @include flex-center;
+        margin-left: 50px;
+    }
+
+    .linenImgs {
+        margin-right: 50px !important;
+        margin-left: 50px !important;
+    }
+
+    .warranty {
+        margin-left: 185px !important;
+    }
+
+    .linensTitle {
+        margin-right: 30px !important;
+        margin-left: 30px !important;
+    }
+
+    .linenParagraphs {
+        margin-right: 10px !important;
+        margin-left: 20px !important;
+        font-size: 14px !important;
+        letter-spacing: .3px !important;
+        width: 264px !important;
     }
 }
 
@@ -547,6 +660,30 @@
         margin-top: 40px !important;
         margin-right: 300px;
     }
+
+    .linenImgs {
+        margin-right: 40px !important;
+        margin-left: 40px !important;
+        height: 180px !important;
+    }
+
+    .warranty {
+        height: 80px !important;
+        margin-left: 160px !important;
+    }
+
+    .linensTitle {
+        margin-right: 6px !important;
+        margin-left: 6px !important;
+    }
+
+    .linenParagraphs {
+        margin-right: 20px !important;
+        margin-left: 25px !important;
+        font-size: 14px !important;
+        letter-spacing: .3px !important;
+        width: 250px !important;
+    }
 }
 
 @media screen and(max-width: 1190px) {
@@ -556,6 +693,24 @@
     .headerTitleParent {
         margin-top: 40px !important;
         margin-right: 300px;
+    }
+
+    .wovenParent {
+        @include flex-center;
+        margin-left: 60px;
+    }
+
+    .wovenImg {
+        height: 480px !important;
+        width: 770px !important;
+    }
+
+    .linenParagraphs {
+        margin-right: 20px !important;
+        margin-left: 25px !important;
+        font-size: 14px !important;
+        letter-spacing: .3px !important;
+        width: 220px !important;
     }
 }
 
@@ -575,23 +730,175 @@
     .headerParagraph {
         width: 500px !important;
     }
+
+    .productBG {
+        height: 2055px;
+    }
+
+    .wovenParent {
+        display: flex;
+        flex-direction: column;
+        margin-left: 0px !important;
+        margin-right: 0px !important;
+
+        .wovenCenterTitle {
+            @include flex-center;
+        }
+        .wovenTitle {
+            margin-top: 90px !important;
+            margin-left: 0px !important;
+            margin-right: 0px !important;
+        }
+
+        .wovenCenterSubtitle {
+            @include flex-center;
+        }
+    
+        .wovenSubtitle {
+            position: relative;
+            margin-top: 160px !important;
+            margin-left: 0px !important;
+            margin-right: 5px !important;
+            letter-spacing: 1px;
+        }
+
+        .wovenSubtitle2 {
+            position: relative;
+            margin-top: 160px !important;
+            margin-left: 0px !important;
+            margin-right: 0px !important;
+            letter-spacing: 1px;
+        }
+
+        .wovenCenterBtn {
+            @include flex-center;
+        }
+    
+        .btn {
+            position: absolute;
+            margin-top: 40px;
+            margin-left: 0px;
+            margin-right: 0px;
+        }
+    }
+
+    .wovenImg {
+        margin-top: 80px !important;
+        margin-left: 0px !important;
+        margin-right: 140px !important;
+        height: 480px !important;
+        width: 770px !important;
+    }
+
+    .linenParent {
+        display: flex;
+        flex-wrap: wrap;
+        margin-right: 90px;
+        margin-left: 90px;
+    }
+
+    .linenImgs {
+        margin-right: 120px !important;
+        margin-left: 120px !important;
+        height: 180px !important;
+    }
+
+    .warranty {
+        height: 80px !important;
+        margin-top: 20px !important;
+        margin-left: 230px !important;
+    }
+
+    .linensTitle {
+        margin-right: 85px !important;
+        margin-left: 85px !important;
+    }
+
+    .linenParagraphs {
+        margin-right: 0px !important;
+        margin-left: 70px !important;
+        margin-bottom: -50px;
+        font-size: 16px !important;
+        letter-spacing: .4px !important;
+        width: 305px !important;
+    }
+
+    .learnMore {
+       margin-top: 30px;
+    }
 }
 
 @media screen and(max-width: 1024px) {
     .headerTitleParent {
         margin-top: 90px !important;
     }
+
+    .productBG {
+        height: 2015px;
+    }
+
+    .linenParent {
+        display: flex;
+        flex-wrap: wrap;
+        margin-right: 0px;
+        margin-left: 0px;
+    }
+
+    .videoParent {
+        margin-top: 250px;
+    }
+
+    .videoThumb {
+        width: 900px !important;
+        height: 450px !important;
+    }
 }
 
 @media screen and(max-width: 992px) {
+    .videoThumb {
+        width: 850px !important;
+        height: 450px !important;
+    }
 }
 
 @media screen and(max-width: 906px) {
-    
+    .linenImgs {
+        margin-right: 80px !important;
+        margin-left: 80px !important;
+        height: 180px !important;
+    }
+
+    .warranty {
+        height: 80px !important;
+        margin-top: 20px !important;
+        margin-left: 200px !important;
+    }
+
+    .linensTitle {
+        margin-right: 50px !important;
+        margin-left: 50px !important;
+    }
+
+    .linenParagraphs {
+        margin-right: 0px !important;
+        margin-left: 70px !important;
+        margin-bottom: -50px;
+        font-size: 14px !important;
+        letter-spacing: .3px !important;
+        width: 220px !important;
+    }
+
+    .videoThumb {
+        width: 800px !important;
+        height: 400px !important;
+    }
 }
 
 @media screen and(max-width: 834px) {
-  
+    .videoThumb {
+        width: 750px !important;
+        height: 375px !important;
+    }
 }
 
 // Phones
@@ -604,10 +911,26 @@
     .headerParagraph {
         width: 450px !important;
     }
+
+    .videoThumb {
+        width: 700px !important;
+        height: 375px !important;
+    }
 }
 
 @media screen and(max-width: 736px) {
-
+    .productBG {
+        height: 1970px;
+    }
+    
+    .videoParent {
+        margin-top: 200px;
+    }
+    
+    .videoThumb {
+        width: 650px !important;
+        height: 350px !important;
+    }
 }
 
 @media screen and(max-width: 667px) {
