--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -11,7 +11,7 @@
   bottom: 0;
   width: 100%;
   height: 100%;
-  z-index: 10;
+  z-index: 30 !important;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -49,3 +49,119 @@
       transition: .8s;
       background-color: rgba(172, 170, 170, 0.637);
       color: black; }
+
+@media screen and (max-width: 1400px) {
+  .exit {
+    position: absolute;
+    top: 80px;
+    right: 40px !important; } }
+
+@media screen and (max-width: 1400px) {
+  .exit {
+    position: absolute;
+    top: 80px;
+    right: 30px !important; } }
+
+@media screen and (max-width: 1015px) {
+  .modalBG {
+    width: 950px; } }
+
+@media screen and (max-width: 960px) {
+  .modalBG {
+    width: 900px; }
+  iframe {
+    width: 840px !important; } }
+
+@media screen and (max-width: 920px) {
+  .modalBG {
+    width: 800px;
+    height: 450px; }
+  .modalVideoParent {
+    margin-top: 10px !important; }
+    .modalVideoParent p {
+      margin-top: -15px; }
+  iframe {
+    width: 740px !important; } }
+
+@media screen and (max-width: 820px) {
+  .exit {
+    top: 200px !important; }
+  .modalBG {
+    width: 680px;
+    height: 400px; }
+  .modalVideoParent {
+    margin-top: -15px !important; }
+    .modalVideoParent p {
+      margin-top: -30px; }
+  iframe {
+    width: 640px !important; } }
+
+@media screen and (max-width: 720px) {
+  .modalBG {
+    width: 580px;
+    height: 350px; }
+  .modalVideoParent {
+    margin-top: -25px !important; }
+    .modalVideoParent p {
+      margin-top: -50px; }
+  iframe {
+    width: 540px !important; } }
+
+@media screen and (max-width: 620px) {
+  .exit {
+    top: 250px !important; }
+  .modalBG {
+    width: 480px;
+    height: 300px; }
+  .modalVideoParent {
+    margin-top: -50px !important; }
+    .modalVideoParent p {
+      margin-top: -70px; }
+  iframe {
+    width: 440px !important; } }
+
+@media screen and (max-width: 480px) {
+  .exit {
+    top: 300px !important; }
+  .modalBG {
+    width: 440px;
+    height: 250px; }
+  .modalVideoParent {
+    margin-top: -70px !important; }
+    .modalVideoParent p {
+      margin-top: -90px; }
+  iframe {
+    width: 410px !important; } }
+
+@media screen and (max-width: 420px) {
+  .exit {
+    top: 350px !important; }
+  .modalBG {
+    width: 380px;
+    height: 250px; }
+  .modalVideoParent {
+    margin-top: -70px !important; }
+    .modalVideoParent p {
+      margin-top: -90px; }
+  iframe {
+    width: 360px !important; } }
+
+@media screen and (max-width: 417px) {
+  .exit {
+    top: 300px !important; } }
+
+@media screen and (max-width: 400px) {
+  .exit {
+    top: 330px !important; }
+  .modalBG {
+    width: 320px;
+    height: 200px; }
+  .modalVideoParent {
+    margin-top: -90px !important; }
+    .modalVideoParent p {
+      font-size: 12px;
+      margin-top: -110px; }
+  .videoDef {
+    font-size: 12px; }
+  iframe {
+    width: 300px !important; } }
