--- a/src/components/landing/landing.scss
+++ b/src/components/landing/landing.scss
@@ -907,7 +907,7 @@
     }
 
     .productBG {
-        height: 2080px;
+        height: 2130px;
     }
 
     .wovenParent {
@@ -1142,7 +1142,7 @@
     }
 
     .productBG {
-        height: 2015px;
+        height: 2030px;
     }
 
     .linenParent {
@@ -1278,6 +1278,10 @@
         width: 450px !important;
     }
 
+    .productBG {
+        height: 1970px !important;
+    }
+
     .wovenImg {
         margin-right: 0px !important;
         margin-left: 0px !important;
@@ -1322,8 +1326,9 @@
 }
 
 @media screen and(max-width: 736px) {
+
     .productBG {
-        height: 2750px !important;
+        height: 1830px !important;
     }
 
     .wovenImg {
@@ -1369,7 +1374,17 @@
     }
 }
 
+@media screen and(max-width: 699px) {
+    .productBG {
+        height: 2750px !important;
+    }
+}
+
 @media screen and(max-width: 667px) {
+    .productBG {
+        height: 2750px !important;
+    }
+
     .videoThumb {
         width: 600px !important;
         height: 370px !important;
@@ -1658,7 +1673,7 @@
     }
 
     .productBG {
-        height: 2580px !important;
+        height: 2630px !important;
     }
 
     .wovenImg {
@@ -1721,6 +1736,10 @@
 @media screen and(max-width: 375px) {
     .landingHeader {
         background-position: left -640px bottom;
+    }
+
+    .productBG {
+        height: 2600px !important;
     }
 
     .videoThumb {
