--- a/src/App.css
+++ b/src/App.css
@@ -99,7 +99,7 @@ a:visited{
 	color: var(--color-blue);
 }
 a:hover {
-	color: var(--color-light-blue);
+    color: var(--color-light-blue);
 }
 
 .bg-light-grey{
@@ -123,6 +123,8 @@ a:hover {
 }
 .btn-black:hover, .btn-black:focus {
     color: var(--color-med-grey);
+    opacity: 0.9;
+    transition: 0.5s;
 }
 
 /****** Your Custom Styles ******/
