--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -78,8 +78,6 @@
     height: 450px; }
   .modalVideoParent {
     margin-top: 10px !important; }
-    .modalVideoParent p {
-      margin-top: -15px; }
   iframe {
     width: 740px !important; } }
 
@@ -91,7 +89,7 @@
     height: 400px; }
   .modalVideoParent {
     margin-top: -15px !important; }
-    .modalVideoParent p {
+    .modalVideoParent .videoDescription {
       margin-top: -30px; }
   iframe {
     width: 640px !important; } }
@@ -102,7 +100,7 @@
     height: 350px; }
   .modalVideoParent {
     margin-top: -25px !important; }
-    .modalVideoParent p {
+    .modalVideoParent .videoDescription {
       margin-top: -50px; }
   iframe {
     width: 540px !important; } }
@@ -115,8 +113,8 @@
     height: 300px; }
   .modalVideoParent {
     margin-top: -50px !important; }
-    .modalVideoParent p {
-      margin-top: -70px; }
+    .modalVideoParent .videoDescription {
+      margin-top: -80px; }
   iframe {
     width: 440px !important; } }
 
@@ -127,8 +125,8 @@
     width: 440px;
     height: 250px; }
   .modalVideoParent {
-    margin-top: -70px !important; }
-    .modalVideoParent p {
+    margin-top: -90px !important; }
+    .modalVideoParent .videoDescription {
       margin-top: -90px; }
   iframe {
     width: 410px !important; } }
@@ -140,9 +138,9 @@
     width: 380px;
     height: 250px; }
   .modalVideoParent {
-    margin-top: -70px !important; }
-    .modalVideoParent p {
-      margin-top: -90px; }
+    margin-top: -90px !important; }
+    .modalVideoParent .videoDescription {
+      margin-top: -100px; }
   iframe {
     width: 360px !important; } }
 
@@ -157,9 +155,8 @@
     width: 320px;
     height: 200px; }
   .modalVideoParent {
-    margin-top: -90px !important; }
-    .modalVideoParent p {
-      font-size: 12px;
+    margin-top: -100px !important; }
+    .modalVideoParent .videoDescription {
       margin-top: -110px; }
   .videoDef {
     font-size: 12px; }
